--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "npm": ">=3.8"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "babel-polyfill": "^6.9.1",
+    "cassandra-driver": "^3.1.6",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
     "history": "^3.0.0",
